# dedupe

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
dedupe/: api.py  blocking.py  labeler.py  predicates.py  tfidf.py  training.py
dedupe/variables/: string.py
