[metadata]
name = dedupe
url = https://github.com/dedupeio/dedupe
version = 2.0.6
author = Forest Gregg
author_email = fgregg@datamade.us
description = A python library for accurate and scaleable data deduplication and entity-resolution.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
project_urls =
    Issues = https://github.com/dedupeio/dedupe/issues
    Documentation = https://docs.dedupe.io/en/latest/
    Examples = https://github.com/dedupeio/dedupe-examples
    Twitter = https://twitter.com/DedupeIo
    Changelog = https://github.com/dedupeio/dedupe/blob/master/CHANGELOG.md
    Mailing List = https://groups.google.com/forum/#!forum/open-source-deduplication,    

[options]
packages = 
    dedupe
    dedupe.variables
install_requires =
    fastcluster
    dedupe-hcluster
    affinegap>=1.3
    categorical-distance>=1.9
    dedupe-variable-datetime
    rlr>=2.4.3
    numpy>=1.13
    doublemetaphone
    highered>=0.2.0
    simplecosine>=1.2
    haversine>=0.4.1
    BTrees>=4.1.4
    zope.index
    Levenshtein_search
    typing_extensions

[tool:pytest]
addopts = -v
norecursedirs=docs

[flake8]
max-line-length=160
